# sql-autopsy

./: .gitignore  LICENSE  README.md  broken_script.sql  example.py  pyproject.toml
.github/workflows/: publish.yml
src/sql_autopsy/: cli.py  diagnoser.py  executor.py  grapher.py  instrumentor.py  parser.py
src/sql_autopsy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
